* Now system is package inferred and loadable has a core with minimum dependencies.
* Fixed displaying docstring for constant locative.
* Include locative was fixed for files with unicode characters
file-subseq function was rewritten.
* Locatives can be specified without a package prefix inside the defsection
because all locative symbols now live in 40ANTS-DOC/LOCATIVES package.
* Function update-asdf-system-readmes was renamed to update-asdf-system-readmes and now it generates only one README file
* Tests were rewritten to use Rove and to support (asdf:test-system :40ants-doc)
* Removed mgl-pax:define-package macro. An uiop:define-package can be used instead.
* Now builder issues a warning if it wasn't able to find a symbol mentioned in the docstring.
* Uppercase word should have at least two charaters to be resolved as a symbol.
* Improved work with package inferred systems. For examples, when fixed the
automatic symbol rendering for case when documentation section and
referenced objects are in different packages.
* Allowed to reference objects using keywords.

* Fixed docstring extraction for compiler macro.